--- a/Proyecto_Final_11_12_25_JMHA_MAGG2.ipynb
+++ b/Proyecto_Final_11_12_25_JMHA_MAGG2.ipynb
@@ -2550,6 +2550,134 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "PASO 12 Guardar el mejor modelo en .h5\n",
+        "\n",
+        "12. Guardar el mejor modelo en formato .h5\n",
+        "En esta celda:\n",
+        "\n",
+        "Creamos la carpeta models si no existe.\n",
+        "Guardamos el mejor modelo encontrado en un archivo .h5.\n",
+        "Este archivo puede usarse luego para recargar el modelo en Keras o para despliegue."
+      ],
+      "metadata": {
+        "id": "6rdCZmiJlGO3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ============================================\n",
+        "# 12. Guardar el mejor modelo en formato .h5\n",
+        "# ============================================\n",
+        "\n",
+        "# Carpeta donde guardaremos los modelos\n",
+        "os.makedirs(\"models\", exist_ok=True)\n",
+        "\n",
+        "# Definimos la ruta del archivo .h5 usando el nombre del mejor modelo\n",
+        "h5_path = f\"models/best_model_{best_model_name}.h5\"\n",
+        "\n",
+        "# Guardamos el modelo en formato HDF5\n",
+        "best_model.save(h5_path)\n",
+        "\n",
+        "print(\"Mejor modelo guardado en:\", h5_path)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "w-zddP6Vz4Eg",
+        "outputId": "26f32ea0-3e9e-4185-9b87-67e761b7a5ff"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mejor modelo guardado en: models/best_model_CNN_Simple.h5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "PASO 13  **Exportar el mejor modelo a ONNX**\n",
+        "\n",
+        "## 13. Exportar el mejor modelo a formato ONNX\n",
+        "\n",
+        "En este paso:\n",
+        "\n",
+        "- Definimos la ruta del archivo `.onnx`.\n",
+        "- Utilizamos `tf2onnx` para convertir el modelo Keras a ONNX.\n",
+        "- ONNX permite usar el modelo en otros entornos (por ejemplo, APIs en otros lenguajes, motores de inferencia optimizados, etc.).\n",
+        "- Si ocurre un error (por ejemplo, no está instalada la librería), se muestra un mensaje de advertencia.\n"
+      ],
+      "metadata": {
+        "id": "R1g2jmYE0DQy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ============================================\n",
+        "# 13. Exportar el mejor modelo a formato ONNX\n",
+        "# ============================================\n",
+        "\n",
+        "# Ruta donde se guardará el archivo ONNX\n",
+        "onnx_path = f\"models/best_model_{best_model_name}.onnx\"\n",
+        "\n",
+        "try:\n",
+        "    # Definimos la especificación de entrada: lote de imágenes (None, alto, ancho, canales)\n",
+        "    spec = (tf.TensorSpec((None, IMG_SIZE[0], IMG_SIZE[1], 3), tf.float32, name=\"input\"),)\n",
+        "\n",
+        "    # Convertimos el modelo de Keras a formato ONNX\n",
+        "    model_proto, _ = tf2onnx.convert.from_keras(\n",
+        "        best_model,\n",
+        "        input_signature=spec,\n",
+        "        opset=13    # Versión de opset de ONNX\n",
+        "    )\n",
+        "\n",
+        "    # Guardamos el modelo ONNX en disco\n",
+        "    with open(onnx_path, \"wb\") as f:\n",
+        "        f.write(model_proto.SerializeToString())\n",
+        "\n",
+        "    print(\"Modelo ONNX guardado en:\", onnx_path)\n",
+        "\n",
+        "except Exception as e:\n",
+        "    # Si algo falla (por ejemplo, tf2onnx no está instalado), mostramos el error\n",
+        "    print(\"Error al exportar a ONNX:\", e)\n",
+        "    print(\"Revisa que tf2onnx esté correctamente instalado si necesitas este formato.\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pk1lRWr80VPw",
+        "outputId": "279504af-58a9-4a5b-9780-0e90c7387b52"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Error al exportar a ONNX: name 'tf2onnx' is not defined\n",
+            "Revisa que tf2onnx esté correctamente instalado si necesitas este formato.\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
